--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,9 +246,9 @@ footer {
 
 /* Media queries */
 
-/* For larger to medium screens size to. 120px wide and down */
+/* For larger to medium screens size to. 1200px wide and down */
 
-@media screen and (max-width:120px) {
+@media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
         height: 120px;
@@ -275,5 +275,17 @@ footer {
 
     hr {
         display: none;
+    }
+}
+
+/* For medium screen sizes from 950px wide and down */
+
+@media screen and (max-width: 1200px) {
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px
     }
 }
